# Super-Mario-Sunburn

./: CMakeLists.txt  README.md
include/: coop.hxx  settings.hxx
src/: assets.cpp  bossmusic.cpp  coins.cpp  episode_select.cpp  gameplus.cpp  main.cpp  saveflags.cpp  settings.cpp
src/yoshi/: egg_fruit.cpp
targets/: GCNKuriboClangRelease.cmake
